UPDATE PREV SESSION 6

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,5 +127,8 @@ task testear {
 }
 tasks.named('test') {
     // Use junit platform for unit tests.
-    useJUnitPlatform()
+    useJUnitPlatform {
+    	//includeTags 'Individual'
+    	//excludeTags 'Individual'
+    }
 }
