--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,19 @@ task testear {
 tasks.named('test') {
     // Use junit platform for unit tests.
     useJUnitPlatform {
-    	//includeTags 'Individual'
-    	//excludeTags 'Individual'
+     //includeTags 'Individual'
+     //excludeTags 'Individual'
+
+ 	 excludeEngines 'junit-jupiter'
+     includeEngines 'junit-vintage'
+      
+	filter {
+        //include specific method in any of the tests
+        includeTestsMatching "*CalculadoraTest"
+        //includeTestsMatching "*testSuma"
+        //excludeTestsMatching "*testSuma"
+		//**setExcludePatterns "*Resta","*Suma"
+        //**setIncludePatterns "*Resta","*Suma"
+     }
     }
 }
