--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
 	implementation 'org.hamcrest:hamcrest-core:2.2'
 	implementation 'org.assertj:assertj-core:3.18.1'
 	
+	//LIBRERIA PRUEBAS PARAMETRIZADAS
+	implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
 
 }
 
