--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
 	
 	//LIBRERIA PRUEBAS PARAMETRIZADAS
 	implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
+	
+	// TEST SUIT
+	implementation 'org.junit.platform:junit-platform-runner:1.7.0'
 
 }
 
